updated index.html to reflect that this is a port to Nancy

--- a/RestBucks/index.htm
+++ b/RestBucks/index.htm
@@ -12,15 +12,12 @@
             </a>
         </h1>
         <ul id="menu">
-            <li><a href="http://restbucks.codeplex.com/">Codeplex Home</a> </li>
-            <li><a href="http://restbucks.codeplex.com/documentation">Documentation</a> </li>
-            <li><a href="http://restbucks.codeplex.com/discussions">Discussions</a> </li>
-            <li><a href="http://restbucks.codeplex.com/workitem/list/basic">Issues</a> </li>
-            <li><a href="http://joseoncode.com/category/restbucks/">Blog posts</a> </li>
+            <li><a href="http://github.com/horsdal/Restbucks-on-Nancy">Github Home</a> </li>
         </ul>
         <p class="intro">
             <span class="l1">This is an open source self-documented example application of a level-3</span>
-            <span class="l2">REST api based on the excelent example of Rest in Practice.</span>
+          <span class="l2">REST api based on the excelent example of Rest in Practice.</span>
+          <span class="l2">This example is a port to <a href="http://nancyfx.org/">Nancy</a> of the <a href="http://restbucks.codeplex.com/">Restbucks on .NET example</a></span>
             <em>Get some rest.</em>
         </p>
     </div>
@@ -46,14 +43,14 @@
                 Buy the <a href="http://restinpractice.com/book.html">book</a>.
             </li>
             <li>
-                Read my <a href="http://joseoncode.com/category/restbucks">posts</a> for the implementation details .
+                Read José F. Romaniellos <a href="http://joseoncode.com/tag/restbucks">posts</a> for the implementation details of the original RestBucks on .NET.
             </li>
         </ul>
         
      <h2 id="H1">
         Get the source code!</h2>
-        <p>Clone the source of the application <a href="http://restbucks.codeplex.com/SourceControl/list/changesets">at codeplex</a> and follow the 
-            <a href="http://restbucks.codeplex.com/wikipage?title=Preparing%20the%20environment">instructions</a> to run in your local machine.</p>
+        <p>Clone the source of the application <a href="http://github.com/horsdal/Restbucks-on-Nancy">at GitHub</a> and follow the 
+            <a href="http://restbucks.codeplex.com/wikipage?title=Preparing%20the%20environment">instructions</a> of the original Restbuck on .NET example to run in your local machine.</p>
         
     <p class="copy">Thanks to <a href="http://jagregory.com">James Gregory</a> for allowing us to use the stylesheet for this website.</p> 
 </body>
